# Extended-SQLite-Viewer

Extended-SQLite-Viewer/build-test_SQLiteViewer-Desktop_Qt_5_12_2_MSVC2017_64bit-Release/: Makefile  Makefile.Debug  Makefile.Release  target_wrapper.bat
Extended-SQLite-Viewer/test_SQLiteViewer/: test_SQLiteViewer.pro  tst_test_sqlite_viewer.cpp
Extended_SQLite_Viewer/: DBTable.qml  Extended_SQLite_Viewer.pro  Rectangle.qml  dbasesingleton.cpp  dbasesingleton.h  dbasesingleton_копия.h  main.cpp  main.qml  mysqltablemodel.cpp  qhexconvertor.cpp  qhexconvertor.h  qsqlitemodel.cpp  qsqlitemodel.h  qsqlitetablelist.cpp  qsqlitetablelist.h  rawdatabaseparserwrapper.cpp  rawdatabaseparserwrapper.h  rawdatatable.cpp  rawdatatable.h
Fin_Release/translations/: qt_de.qm  qt_ru.qm
Lib/: parserlib.lib  parserlib_old.lib  parserlib_ьфшт.lib
Parser_testing/: CMakeLists.txt  DB_Structures.cpp
Reports/: test.txt
build-Extended_SQLite_Viewer-Desktop_Qt_5_12_2_MSVC2017_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
build-Extended_SQLite_Viewer-Desktop_Qt_5_12_2_MSVC2017_64bit-Debug/debug/: Extended_SQLite_Viewer.ilk  moc_qhexconvertor.cpp  moc_qsqlitemodel.cpp  moc_qsqlitetablelist.cpp  moc_rawdatatable.cpp  qrc_qml.cpp
parser/: CMakeLists.txt  Database.cpp  Database.h  FreeBlock_parser.cpp  FreeBlock_parser.h  main.cpp
tests/: new_test_db_3.sqlite
tests/Parser_testing/: Database.cpp  FreeBlock_parser.cpp  main.cpp
tests/test_SQLiteViewer/: test_SQLiteViewer.pro  tst_test_sqlite_viewer.cpp
(+5 files in other folders)
